--- a/.github/workflows/deploy_firebase.yml
+++ b/.github/workflows/deploy_firebase.yml
@@ -14,13 +14,13 @@ jobs:
 
     steps:
       - name: Checkout your repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Install, build, and upload your site
         uses: withastro/action@v0
 
       - name: Cache build save
-        uses: actions/cache/save@v3
+        uses: actions/cache/save@v2
         with:
           path: dist
           key: ${{ runner.os }}-build
@@ -31,10 +31,10 @@ jobs:
 
     steps:
       - name: Checkout your repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Cache build restore
-        uses: actions/cache/restore@v3
+        uses: actions/cache/restore@v2
         with:
           path: dist
           key: ${{ runner.os }}-build
@@ -45,7 +45,8 @@ jobs:
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SW_SPACE_SITE }}
-
+          channelID: live
+          
     outputs:
       url: ${{ steps.deploy.outputs.details_url || 'https://spacewiz.dev/' }}
 
@@ -60,13 +61,13 @@ jobs:
 
     steps:
       - name: Checkout your repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ github.ref_name }}
 
       - name: Checkout the Lighthouse repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         with:
           repository: 'myactionway/lighthouse-badges'
           path: temp_lighthouse_badges_nested
